--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint:staged": "lint-staged",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "prepare": "husky install"
   },
   "browserslist": {
     "production": [
@@ -60,7 +62,14 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
+  },
+  "lint-staged": {
+    "*.+(js|tsx)": [
+      "npm run lint"
+    ]
   }
 }
